--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        1.3.7
+@version        1.3.8
 @description    A muted and easy on the eyes style for e621. Big credits to Faucet for the bug reports so far, thank you!
 @author         mandorinn [(www.mandorinn.dev)], faucet [(https://e621.net/users/601225)]
 @updateURL		https://github.com/mandorinn/eSix-Cafe/raw/main/release/eSixCafe.user.css
@@ -3850,7 +3850,7 @@ if themep == classic {
 	}
 }
 
-@-moz-document url-prefix("https://e621.net/extensions"), url-prefix("https://e926.net/extensions") {
+@-moz-document url-prefix("https://e621.net/extensions") {
 	/* idem's Sourcing Suite */
 	h1 {
 		background-color: var(--bg);
