--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        1.4.3
+@version        1.4.2
 @description    A muted and easy on the eyes style for e621. Big credits to Faucet for the bug reports so far, thank you!
 @author         mandorinn [(www.mandorinn.dev)], faucet [(https://e621.net/users/601225)]
 @updateURL		https://github.com/mandorinn/eSix-Cafe/raw/main/release/eSixCafe.user.css
@@ -2911,7 +2911,7 @@ if themep == classic {
 	.rounded, .stats-rounded {
 		background-color: var(--bg)!important;
 		overflow: hidden;
-		box-shadow: 0 0 .25rem #000;
+		box-shadow: 0 0 .25rem #000!important;
 	}
 	.rounded tr:nth-child(2n), .stats-rounded tr:nth-child(2n) {
 		background-color: var(--bg-400)!important;
