--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        1.4.2
+@version        1.4.3
 @description    A muted and easy on the eyes style for e621. Big credits to Faucet for the bug reports so far, thank you!
 @author         mandorinn [(www.mandorinn.dev)], faucet [(https://e621.net/users/601225)]
 @updateURL		https://github.com/mandorinn/eSix-Cafe/raw/main/release/eSixCafe.user.css
@@ -3542,8 +3542,8 @@ if themep == classic {
 	}
 
 	body.resp div#page #c-help section#content, body.resp div#page #c-wiki-pages section#content {
-	margin-left: 1rem!important;
-	margin-right: 1rem!important;
+		margin-left: 1rem!important;
+		margin-right: 1rem!important;
 	}
 	}
 	}
@@ -3773,6 +3773,16 @@ if themep == classic {
 			border-radius: 4px;
 		}
 	}
+	}
+	/* Regular userpage */
+	div#page:not([enhancements="true"]) {
+		.profile-avatar img {
+		object-fit: cover;
+		height: 100%;
+		border-radius: var(--avatar-border-radius);
+		aspect-ratio: 1/1;
+		outline: 5px solid var(--elements-highlight) !important;
+		}
 	}
 }
 
