--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        1.4.4
+@version        1.4.5
 @description    A muted and easy on the eyes style for e621. Big credits to Faucet for the bug reports so far, thank you!
 @author         mandorinn [(www.mandorinn.dev)], faucet [(https://e621.net/users/601225)]
 @updateURL		https://github.com/mandorinn/eSix-Cafe/raw/main/release/eSixCafe.user.css
@@ -3247,7 +3247,7 @@ if themep == classic {
 	div#page {
 		overflow: hidden;
 	}
-	body[data-sticky] #maintoggle {
+	body[re621="true"] #maintoggle {
 		display:none;
 	}
 	header#top nav#nav {
@@ -3491,13 +3491,13 @@ if themep == classic {
 			min-width: 150px;
 		}
 	}
-	div#page[enhancements="true"] div#c-users div#a-show .profile-container {
+	body[re621="true"] div#c-users div#a-show .profile-container {
 		flex-direction: column;
 	}
-	div#page[enhancements="true"] div#c-users div#a-show .bottom-section.bottom-section {
+	body[re621="true"] div#c-users div#a-show .bottom-section.bottom-section {
 		max-width: unset!important;
 	}
-	div#page[enhancements="true"] div#c-users div#a-show div.box.user-favorites div.vertical-section, div#page[enhancements="true"] div#c-users div#a-show div.box.user-favorites div.vertical-section, div#page[enhancements="true"] div#c-users div#a-show div.box.user-uploads div.vertical-section, div#page[enhancements="true"] div#c-users div#a-show div.box.user-uploads div.vertical-sectionn {
+	body[re621="true"] div#c-users div#a-show div.box.user-favorites div.vertical-section, body[re621="true"] div#c-users div#a-show div.box.user-favorites div.vertical-section, body[re621="true"] div#c-users div#a-show div.box.user-uploads div.vertical-section, body[re621="true"] div#c-users div#a-show div.box.user-uploads div.vertical-sectionn {
 		flex-wrap: unset!important;
 		gap: .25rem;
 	}
@@ -3553,7 +3553,7 @@ if themep == classic {
 	div#c-users div#a-show .profile-stats {
 		background-color: var(--bg-400)!important;
 	}
-	div#page[enhancements="true"] {
+	body[re621="true"] {
 	div#c-users div#a-show .bottom-section{
 		padding: 1rem;
 		max-width: 55vw;
@@ -3645,7 +3645,7 @@ if themep == classic {
 	div#c-users div#a-show .user-statistics .column {
 		grid-template-columns: max-content minmax(1px,1fr);
 	}
-	div#page[enhancements="true"] div#c-users div#a-show div.box.user-favorites, div#page[enhancements="true"] div#c-users div#a-show div.box.user-uploads {
+	body[re621="true"] div#c-users div#a-show div.box.user-favorites, body[re621="true"] div#c-users div#a-show div.box.user-uploads {
 		border-radius: .5rem;
 		overflow:hidden;
 	}
@@ -3780,7 +3780,7 @@ if themep == classic {
 	}
 	}
 	/* Regular userpage */
-	div#page:not([enhancements="true"]) {
+	body:not([re621="true"]) {
 		.profile-avatar img {
 		object-fit: cover;
 		height: 100%;
