Colors for approved/denied takedowns
* Add colors to the approved/denied status on takedowns, but make it consistent with the tickets page rather than using the colored boxes
* Use the themed red/green colors on the status text for tickets and takedowns

--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -2843,6 +2843,15 @@ if themep == classic {
 			color: var(--base-link-hover)!important;
 		}
 	}
+	/* Takedowns and Tickets */
+	.sect_green, .approved-ticket {
+		color: var(--favorite-button)!important;
+		font-weight: 900;
+	}
+	.sect_red, .redtext, .denied-ticket {
+		color: var(--flagged)!important;
+		font-weight: 900;
+	}
 	/* Tag Changes */
 	#p-revert-listing {
 		max-width: 90vw;
