--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        1.4.6
+@version        1.4.7
 @description    A muted and easy on the eyes style for e621. Big credits to Faucet for the bug reports so far, thank you!
 @author         mandorinn [(www.mandorinn.dev)], faucet [(https://e621.net/users/601225)]
 @updateURL		https://github.com/mandorinn/eSix-Cafe/raw/main/release/eSixCafe.user.css
@@ -47,7 +47,7 @@ if themep == muted {
 		--thin-scrollbar: var(--true);
 		--main-page-background: url(https://static1.e621.net/data/09/f8/09f84e1224df7b3502456589dd75c0c3.jpg)!important;
 		--artist-credit: "Background by Tom Fischbach";
-		--main-font: Yu Gothic UI, Arial;
+		--main-font: Segoe UI, Arial;
 		--bg-300: #364758;
 		--bg-400: #2c3946;
 		--bg: #232e38;
