Fix oversized blacklist thumbnails on the forum
Reported by Dripen Arn; Blacklisted thumbnails were accidentally also being effected by this selector.

--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -2667,7 +2667,7 @@ if themep == classic {
 				}
 			}
 		}
-		.avatar, .blacklisted {
+		.avatar, .avatar .blacklisted {
 			display: flex;
 			align-items: center;
 			justify-content: center;
