--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        1.4.9
+@version        1.5.0
 @description    A muted and easy on the eyes style for e621. Big credits to Faucet for the bug reports so far, thank you!
 @author         mandorinn [(www.mandorinn.dev)], faucet [(https://e621.net/users/601225)]
 @updateURL		https://github.com/mandorinn/eSix-Cafe/raw/main/release/eSixCafe.user.css
@@ -15,7 +15,8 @@
 	"Circle":"circle",
 	"Square":"square"
 }
-@var		checkbox	buttons		" Comment Buttons" 1
+@var		checkbox	buttons		"Comment Buttons" 1
+@var		checkbox	borderRank	"Name Rank Border Colors ⚠️" 1
 
 
 ==/UserStyle== */
@@ -2499,6 +2500,29 @@ if themep == classic {
 			color: var(--user-banned-hover)!important;
 		}
 	}
+	
+	if borderRank == 1 {
+		
+	.author-info:has(.user-admin) .post-thumbnail {
+		border-color: var(--user-admin) !important;
+	}
+	.author-info:has(.user-privileged) .post-thumbnail {
+		border-color: var(--user-privileged) !important;
+	}
+	.author-info:has(.user-contributor) .post-thumbnail {
+		border-color: var(--user-contributor) !important;
+	}
+	.author-info:has(.user-former) .post-thumbnail {
+		border-color: var(--user-former-staff) !important;
+	}
+	.author-info:has(.user-janitor) .post-thumbnail {
+		border-color: var(--user-janitor) !important;
+	}
+	.author-info:has(.user-banned) .post-thumbnail,
+	.author-info:has(.user-blocked) .post-thumbnail {
+		border-color: var(--user-banned) !important;
+	}
+	}
 	.comments article {
 		position:relative;
 	}
@@ -2700,6 +2724,7 @@ if themep == classic {
 				max-height: 100%!important;
 				object-fit: cover;
 				width: 100%!important;
+				min-width: 124px; /* Magic number, just took the pixel measurement that firefox gave me for avatars that fully filled the space and added it here */
 				margin-inline: auto;
 				aspect-ratio: 1/1;
 				user-select: none;
