--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        1.5.8
+@version        1.5.9
 @description    A muted and easy on the eyes style for e621. Big credits to Faucet for the bug reports so far, thank you!
 @author         mandorinn [(www.mandorinn.dev)], faucet [(https://e621.net/users/601225)]
 @updateURL		https://github.com/mandorinn/eSix-Cafe/raw/main/release/eSixCafe.user.css
@@ -3356,6 +3356,26 @@ if themep == classic {
 			}
 		}
 	}
+		#c-bulk-update-requests {
+		
+			form.simple_form.inline-form div.input.string.optional {
+				input {
+					max-width: 80%;
+				}
+			}
+			
+			th:nth-child(1) {
+				width: fit-content !important;
+			}
+			table.striped {
+				td {
+					word-wrap: break-word;
+					max-width: 10ch;
+					max-height: 1rem;
+					text-overflow: ellipsis;
+				}
+			}
+		}
 	}
 	/* Cloudflare error page */
 	#cf-wrapper {
